--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,11 +23,9 @@ jobs:
         path: changes.html  # Path to your HTML file
 
     - name: Run JavaScript Linting
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - run: npm install -g eslint
-    - run: eslint changes.html  # Run linting on your JavaScript code
+      run: |
+        npm install -g eslint
+        eslint changes.html  # Run linting on your JavaScript code
 
     - name: Run Unit Tests (if applicable)
       # Add steps to run unit tests here, if you have any
