--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,10 +22,16 @@ jobs:
       with:
         path: changes.html  # Path to your HTML file
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install ESLint
+      run: npm install -g eslint
+
     - name: Run JavaScript Linting
-      run: |
-        npm install -g eslint
-        eslint changes.html  # Run linting on your JavaScript code
+      run: eslint changes.html  # Run linting on your JavaScript code
 
     - name: Run Unit Tests (if applicable)
       # Add steps to run unit tests here, if you have any
