--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: '14'
 
     - name: Install ESLint
-      run: npm install -g eslint
+      run: npm install eslint
 
     - name: Run JavaScript Linting
       run: eslint changes.html  # Run linting on your JavaScript code
