--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,11 +23,12 @@ jobs:
         node-version: '14'
 
     - name: Install ESLint
-      run: npm install eslint@7 --global  # Install ESLint version 7
+      run: npm install eslint --global  # Install ESLint globally
 
     - name: Run JavaScript Linting
       run: |
-        eslint --parser-options '{"ecmaVersion": 2020}' changes.html  # Run linting on your JavaScript code with ECMAScript 2020
+        # Find JavaScript files in the repository and lint them with ESLint
+        find . -name "*.js" -exec eslint --parser-options '{"ecmaVersion": 2020}' {} +
 
     - name: Run Unit Tests (if applicable)
       run: |
